cabal-version:       2.4
name:                nym
version:             0.0.1.0
synopsis:            
    Please see the README on GitHub at <https://github.com/khrynczenko/nym#readme>
description:
    Please see the README on GitHub at <https://github.com/khrynczenko/nym#readme>
homepage:            https://github.com/khrynczenko/nym
bug-reports:         https://github.com/khrynczenko/nym
license:             Apache-2.0
license-file:        LICENSE
author:              Krzysztof Hrynczenko
maintainer:          Krzysztof Hrynczenko <jeniopy@gmail.com>
copyright:           2020 Krzysztof Hrynczenko
extra-doc-files:     README.md
tested-with:         GHC == 8.10.2
data-files:          nyms.db

source-repository head
  type:                git
  location:            https://github.com/khrynczenko/nym.git


common common-options
  build-depends:       base >= 4.11.1.0 && < 4.15
                     --, relude

  --mixins:              base hiding (Prelude)
                     --, relude (Relude as Prelude)

  ghc-options:         -Werror
                       -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -Wnoncanonical-monad-instances
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
                       -fwrite-ide-info
                       -hiedir=.hie
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010
  default-extensions:  DeriveGeneric
                       DerivingStrategies
                       TypeApplications
                       OverloadedStrings

common third-party-dependencies
  build-depends:       text,
                       sqlite-simple,
                       array

executable nym
  import:              common-options,
                       third-party-dependencies
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Cli
                       Messages
                       Words
                       Words.Database
                       Words.Similarity
  build-depends:       optparse-applicative,
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite nym-test
  import:              common-options,
                       third-party-dependencies
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test,
                       app
  main-is:             Spec.hs
  build-depends:       hspec,
  other-modules:       Words.TestDatabase
                       Words.TestSimilarity
                       Words
                       Words.Database
                       Words.Similarity
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
